--- a/TARpe21ShopAljas/Views/Cars/DeleteDetails.cshtml
+++ b/TARpe21ShopAljas/Views/Cars/DeleteDetails.cshtml
@@ -2,8 +2,15 @@
 @{
     string displaystring = "";
 }
+@if (Model.isDeleting)
+{
+    <h1>Delete</h1>
+}
+else
+{
+    <h1>Details</h1>
+}
 
-<h1>Details</h1>
 
 <div>
 
@@ -50,12 +57,24 @@
             @Html.DisplayFor(model => model.Previously_Owned)
         </div>
 
-        @foreach (var images in Model.Image)
+        @foreach (var images in Model.FileToApiViewModels)
         {
             <partial name="_Images" model="images" />
         }
 
     </dl>
-    <a asp-action="Index" asp-controller="cars" class="btn btn-danger">Cancel</a>
+
+    @if (Model.isDeleting)
+    {
+        <form asp-action="DeleteConfirmation">
+            <input type="hidden" asp-for="Id" />
+            <input type="submit" value="Delete" class="btn btn-danger" />
+            <a asp-action="index" asp-controller="cars" class="btn btn-primary">Back</a>
+        </form>
+    }
+    else
+    {
+        <a asp-action="Index" asp-controller="cars" class="btn btn-danger">Cancel</a>
+    }
 
 </div>
