--- a/TARpe21ShopAljas/Views/RealEstates/_Images.cshtml
+++ b/TARpe21ShopAljas/Views/RealEstates/_Images.cshtml
@@ -1,4 +1,4 @@
-﻿@model TARpe21ShopAljas.Models.RealEstate.FileToApiViewModel
+﻿@model TARpe21ShopAljas.Models.Shared.FileToApiViewModel
 
 @{
     var photoPaths = "~/multipleFileUpload/" + (Model.FilePath ?? "noimage.jpg");
