--- a/TARpe21ShopAljas/Views/Spaceships/Delete.cshtml
+++ b/TARpe21ShopAljas/Views/Spaceships/Delete.cshtml
@@ -115,7 +115,7 @@
 
         @foreach (var images in Model.Image)
         {
-            <partial name="_Images" model="images" />
+            <partial name="_SpaceshipImages" model="images" />
         }
     </dl>
     <form asp-action="DeleteConfirmation">
