--- a/TARpe21ShopAljas/Views/Spaceships/Details.cshtml
+++ b/TARpe21ShopAljas/Views/Spaceships/Details.cshtml
@@ -113,7 +113,7 @@
 
         @foreach (var images in Model.Image)
         {
-            <partial name="_Images" model="images"/>
+            <partial name="_SpaceshipImages" model="images" />
         }
 
     </dl>
