--- a/TARpe21ShopAljas/Views/Cars/Index.cshtml
+++ b/TARpe21ShopAljas/Views/Cars/Index.cshtml
@@ -11,11 +11,13 @@
         <thead>
             <tr>
                 <th scope="col">Nr</th>
-                <th scope="col">Location</th>
-                <th scope="col">Country</th>
-                <th scope="col">Size</th>
-                <th scope="col">Price</th>
-                <th scope="col">Sale Status</th>
+                <th scope="col">Name</th>
+                <th scope="col">Transmission</th>
+                <th scope="col">Horsepower</th>
+                <th scope="col">DriveTrain</th>
+                <th scope="col">ZeroToSixty</th>
+                <th scope="col">FuelType</th>
+                <th scope="col">Previously owned</th>
             </tr>
         </thead>
         <tbody>
