--- a/TARpe21ShopAljas/Views/Spaceships/CreateUpdate.cshtml
+++ b/TARpe21ShopAljas/Views/Spaceships/CreateUpdate.cshtml
@@ -139,7 +139,7 @@ else
         </div>
         @foreach (var images in Model.Image)
         {
-            <partial name="_Images" model="images" />
+            <partial name="_SpaceshipImages" model="images" />
             <input asp-action="removeImage" asp-controller="spaceships" asp-route-imageId="@images.ImageId" type="submit" class="btn btn-danger" value="Remove Image"/>
         }
         @if (Model.Id.HasValue)
