--- a/TARpe21ShopAljas/Views/Shared/_Layout.cshtml
+++ b/TARpe21ShopAljas/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Cars" asp-action="Index">Cars</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="weatherForecasts" asp-action="Index">Weather Forecast</a>
+                        </li>
                     </ul>
                 </div>
             </div>
