--- a/TARpe21ShopAljas/Views/OpenWeather/Index.cshtml
+++ b/TARpe21ShopAljas/Views/OpenWeather/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model Tarpe21ShopAljas.Models.OpenWeather.CityResultViewModel
+﻿@model TARpe21ShopAljas.Models.OpenWeather.CityResultViewModel
 
 <h1>City</h1>
 
