--- a/TARpe21ShopAljas/Views/Shared/_Layout.cshtml
+++ b/TARpe21ShopAljas/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="weatherForecasts" asp-action="Index">Weather Forecast</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Email" asp-action="Index">Email</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="openWeather" asp-action="Index">OpenWeather</a>
                         </li>
                     </ul>
                 </div>
